Aggiunto margine div lightbox .content per risolvere bug tasto chiusura immagine non visibile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6948,6 +6948,7 @@ $size: 2;
   justify-content: center;
   pointer-events: none;
   .content {
+    margin-top: 110px;
     max-width: 95%;
     position: relative;
     color: #fff;
